# voice-life-journal

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  README.md  SECURITY.md  agents.md  project-status.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1d0c2ceec37f_add_analysis_columns_to_entries.py  1d56ad46fe63_create_entries_table.py
src/: __init__.py  config.py  database.py
src/bot/: __init__.py  handlers.py  main.py
src/models/: __init__.py  base.py  entry.py
src/services/: __init__.py  analysis.py  entries.py  export.py  stats.py  transcription.py
tests/: __init__.py  conftest.py
tests/fixtures/: README.md
tests/integration/: test_analysis_integration.py  test_bot_flow.py  test_stats_export.py  test_whisper_integration.py
tests/unit/: test_analysis_service.py  test_config.py  test_database.py  test_export_service.py  test_handlers.py  test_stats_service.py  test_transcription.py
